--- a/LABA_5/docker-compose.yml
+++ b/LABA_5/docker-compose.yml
@@ -1,15 +1,30 @@
+version: "3.8"
+
 services:
   fastapi:
-    image: ghcr.io/mikhailgul/myimage:1
-    container_name: fastapi_app
-    restart: always
-    environment:
-      - ENV=production
+    image: ghcr.io/15kamani/myimage:1
+    # задание 1
+    # container_name: fastapi_app
+    # restart: always
+    # environment:
+    #   - ENV=production
+    # networks:
+    #   - app_network
+
+    # задание 2
+    # container_name: fastapi_app
+    # env_file: .env  # Загружаем переменные из .env
+    # restart: always
+    # networks:
+    #   - app_network
+
+  # задание 3
+    env_file: .env
     networks:
       - app_network
+
   nginx:
     image: nginx:latest
-    container_name: my_nginx
     ports:
       - "80:80"
     volumes:
@@ -18,6 +33,33 @@ services:
       - fastapi
     networks:
       - app_network
+
 networks:
   app_network:
     driver: bridge
+
+  nginx:
+    image: nginx:latest
+    container_name: my_nginx
+    ports:
+      - "80:80"  # Доступ через localhost:80
+    volumes:
+      - ./nginx-conf/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - fastapi  # Ждём запуска FastAPI
+    networks:
+      - app_network
+
+# networks:
+#   app_network:
+#     driver: bridge
+
+# залдание 6
+# services:
+#   fastapi:
+#     image: ghcr.io/15kamani/image:latest
+#     env_file: .env
+#     deploy:
+#       replicas: 3  # Запуск 3 экземпляров
+#     networks:
+#       - app_network
