--- a/LABA_5/nginx-conf/nginx.conf
+++ b/LABA_5/nginx-conf/nginx.conf
@@ -1,12 +1,13 @@
-events {}
 http {
+    upstream fastapi_cluster {
+        server fastapi:8000;  # Docker Compose автоматически балансирует между репликами
+    }
+
     server {
         listen 80;
-        server_name localhost;
         location / {
-            proxy_pass http://fastapi:8000;
+            proxy_pass http://fastapi_cluster;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
     }
 }
